# MultiTradingAPI

./: CMakeLists.txt  main.cpp
includes/: broker.h  live_broker.h
includes/alpaca/: alpaca.h  reflections.h  request.h  resp_reflection.h  response.h
includes/coinbase/: coinbase.h  request.h  resp_reflection.h  response.h
src/alpaca/: alpaca.cpp
src/coinbase/: coinbase.cpp
test/: alpaca.cpp  coinbase.cpp
